--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,7 @@ html, body {
   position: relative;
 }
 
-/* Панель керування: ширша (400px) і з більшими відступами */
+/* Панель керування: ширша (400px) і з більшими відступами */Ф
 #controlPanel {
   width: 400px; /* Більше місця для інформації */
   margin: 20px 20px 20px 0; /* Відступи: верх, право, низ, ліво */
