ого, огоооооооооо, ну майже блять 6

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,24 @@
       <option value="" disabled selected hidden>Виберіть показник…</option>
       <option value="unemployment">Рівень безробіття</option>
       <option value="population">Населення</option>
+      <option value="gdp">Валовий внутрішній продукт (ВВП)</option>
+      <option value="gdp_per_capita">ВВП на душу населення</option>
+      <option value="inflation">Інфляція, %</option>
+      <option value="life_expectancy">Тривалість життя</option>
+      <option value="literacy_rate">Рівень грамотності</option>
+      <option value="poverty_rate">Рівень бідності</option>
+      <option value="urban_population">Міське населення</option>
+      <option value="birth_rate">Народжуваність (на 1000)</option>
+      <option value="median_age">Медіанний вік</option>
+      <option value="internet_users">Користувачі Інтернету (%)</option>
+      <option value="mobile_subscriptions">Мобільні підписки (на 100 осіб)</option>
+      <option value="poverty_gap">Розрив бідності (%)</option>
+      <option value="health_expenditure">Витрати на здоров'я (% ВВП)</option>
+      <option value="school_enrollment">Охоплення школою (%)</option>
+      <option value="homicide_rate">Рівень вбивств (на 100 тис.)</option>
+      <option value="co2_emissions">Викиди CO₂ (тонн на особу)</option>
+      <option value="energy_use">Використання енергії (кг нафтового еквіваленту на особу)</option>
+      <option value="urbanization_rate">Рівень урбанізації (%)</option>
     </select>
 
     <label for="countryInput">Країна:</label>
